完善国际化 信息文本和对应的 代码

--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -1,2 +1,21 @@
+error.302.user_not_login=user not login or session invalid.
+error.401.unauthorized=unauthorized.
+error.403.access_forbidden=current access is forbidden.
+error.403.user_not_in_tenant=The user is not belong to current tenant.
+error.404.resource_not_found=resource not found.
+error.500.exception_4_cmem=exception from class {0} method {1}, exception {2} message {3}.
+error.500.inner_error_1=inner error:{0}.
 error.500.unknown=Unknown error, please contact developer.
+error.604.data_not_found=data not found.
+error.604.dictionary_not_found=dictionary not found.
+error.604.unit_not_found=unit:{0} not found.
+error.604.user_not_found=user:{0} not found.
+error.611.check_user_error=Check user error, because bad password or invalid token.
+error.611.data_invalid=Data is not valid.
+error.611.weak_password=Weak password\uFF0Cplease input strong password again info.
+error.613.bean_not_found=Bean {0} not found.
 error.701.input_not_valid=Input not valid
+error.701.invalid_password=Invalid password, please input it again.
+error.706.no_process_power=The user has no power to process the application.
+error.709.session_timeout=Session timeout, please login again.
+error.711.bad_tenant=The user current tenant is not equals the application tenant, please config .
