--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,2 +1,21 @@
+error.302.user_not_login=\u7528\u6237\u672A\u767B\u5F55\u6216\u8005session\u5DF2\u5931\u6548\u3002
+error.401.unauthorized=\u672A\u6388\u6743\u7684\u8BBF\u95EE\u3002
+error.403.access_forbidden=\u5F53\u524D\u8BBF\u95EE\u88AB\u62D2\u7EDD\uFF08\u7528\u6237\u6CA1\u6709\u5BF9\u5E94\u7684\u6743\u9650\uFF09\u3002
+error.403.user_not_in_tenant=\u7528\u6237\u4E0D\u5C5E\u4E8E\u5F53\u524D\u79DF\u6237\uFF0C\u65E0\u6743\u64CD\u4F5C\u3002
+error.404.resource_not_found=\u627E\u4E0D\u5230\u5BF9\u5E94\u7684\u8D44\u6E90\uFF08\u6587\u4EF6\uFF09\u3002
+error.500.exception_4_cmem=\u5F02\u5E38\u4FE1\u606F\u7531 {0} \u7C7B {1} \u65B9\u6CD5\u89E6\u53D1\u5F02\u5E38\uFF0C\u5F02\u5E38\u7C7B\u578B\u4E3A {2} \u5F02\u5E38\u4FE1\u606F\u4E3A {3} \u3002
+error.500.inner_error_1=\u5185\u90E8\u9519\u8BEF:{0}\uFF0C\u8BF7\u8054\u7CFB\u5F00\u53D1\u4EBA\u5458\u6216\u8005\u6280\u672F\u63D0\u4F9B\u5546\u3002
 error.500.unknown=\u5185\u90E8\u9519\u8BEF\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458\uFF1B\u5F00\u53D1\u4EBA\u5458\u8BF7\u67E5\u770B\u540E\u53F0\u65E5\u5FD7\u3002
+error.604.data_not_found=\u627E\u4E0D\u5230\u5BF9\u5E94\u7684\u6570\u636E\u3002
+error.604.dictionary_not_found=\u627E\u4E0D\u5230\u5BF9\u5E94\u7684\u6570\u636E\u5B57\u5178\u3002
+error.604.unit_not_found=\u627E\u4E0D\u5230\u4EE3\u7801\u4E3A{0}\u7684\u673A\u6784\u3002
+error.604.user_not_found=\u627E\u4E0D\u5230\u4EE3\u7801\u4E3A{0}\u7684\u7528\u6237\u3002
+error.611.check_user_error=\u7528\u6237\u9A8C\u8BC1\u5931\u8D25\uFF0C\u9519\u8BEF\u7684\u7528\u6237\u540D\u3001\u5BC6\u7801\u6216\u8005\u5931\u6548\u7684\u4EE4\u724C\u3002
+error.611.data_invalid=\u5F55\u5165\u7684\u6570\u636E\u4E0D\u5408\u6CD5\u3002
+error.611.weak_password=\u5F31\u5BC6\u7801\uFF0C\u8BF7\u6839\u636E\u63D0\u793A\u8F93\u5165\u7B26\u5408\u5F3A\u5EA6\u7684\u5BC6\u7801\u3002
+error.613.bean_not_found=\u7CFB\u7EDF\u627E\u4E0D\u5230\u540D\u4E3A {0} \u7684 bean\u3002
 error.701.input_not_valid=\u8868\u5355\u8F93\u5165\u6570\u636E\u9A8C\u8BC1\u5931\u8D25
+error.701.invalid_password=\u60A8\u8F93\u5165\u7684\u5BC6\u7801\u4E0D\u6B63\u786E\uFF0C\u8BF7\u91CD\u65B0\u8F93\u5165\u5BC6\u7801\u3002
+error.706.no_process_power=\u7528\u6237\u6CA1\u6709\u6267\u884C\u7A0B\u5E8F\u7684\u6743\u9650\u3002
+error.709.session_timeout=session\u8D85\u65F6\uFF0C\u8BF7\u91CD\u65B0\u767B\u5F55\u3002
+error.711.bad_tenant=\u7528\u6237\u5F53\u524D\u79DF\u6237\u548C\u5E94\u7528\u4E0D\u4E00\u81F4\uFF0C\u8BF7\u91CD\u65B0\u52A0\u8F7D\uFF01
