--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,3 +1,4 @@
+error.302.user_is_locked=\u7528\u6237\u88AB\u9501\u5B9A\uFF0C\u8BF7\u7A0D\u540E\u518D\u8BD5\uFF01
 error.302.user_not_login=\u7528\u6237\u672A\u767B\u5F55\u6216\u8005session\u5DF2\u5931\u6548\u3002
 error.401.unauthorized=\u672A\u6388\u6743\u7684\u8BBF\u95EE\u3002
 error.403.access_forbidden=\u5F53\u524D\u8BBF\u95EE\u88AB\u62D2\u7EDD\uFF08\u7528\u6237\u6CA1\u6709\u5BF9\u5E94\u7684\u6743\u9650\uFF09\u3002
@@ -15,6 +16,7 @@ error.611.data_invalid=\u5F55\u5165\u7684\u6570\u636E\u4E0D\u5408\u6CD5\u3002
 error.611.weak_password=\u5F31\u5BC6\u7801\uFF0C\u8BF7\u6839\u636E\u63D0\u793A\u8F93\u5165\u7B26\u5408\u5F3A\u5EA6\u7684\u5BC6\u7801\u3002
 error.613.bean_not_found=\u7CFB\u7EDF\u627E\u4E0D\u5230\u540D\u4E3A {0} \u7684 bean\u3002
 error.701.input_not_valid=\u8868\u5355\u8F93\u5165\u6570\u636E\u9A8C\u8BC1\u5931\u8D25
+error.701.invalid_check_code=\u9A8C\u8BC1\u7801\u8F93\u5165\u6709\u8BEF\uFF0C\u8BF7\u68C0\u67E5\u540E\u91CD\u65B0\u8F93\u5165\uFF01
 error.701.invalid_password=\u60A8\u8F93\u5165\u7684\u5BC6\u7801\u4E0D\u6B63\u786E\uFF0C\u8BF7\u91CD\u65B0\u8F93\u5165\u5BC6\u7801\u3002
 error.706.no_process_power=\u7528\u6237\u6CA1\u6709\u6267\u884C\u7A0B\u5E8F\u7684\u6743\u9650\u3002
 error.709.session_timeout=session\u8D85\u65F6\uFF0C\u8BF7\u91CD\u65B0\u767B\u5F55\u3002
