完善国际化 信息文本和对应的 代码

--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -9,12 +9,19 @@ error.500.inner_error_1=inner error:{0}.
 error.500.unknown=Unknown error, please contact developer.
 error.604.data_not_found=data not found.
 error.604.dictionary_not_found=dictionary not found.
+error.604.object_not_found=Object not found, class {0} id {1}.
 error.604.unit_not_found=unit:{0} not found.
 error.604.user_not_found=user:{0} not found.
+error.610.cannot_delete_parent=Could not delete item with children or sublist.
+error.610.data_not_integrated=Data not integrated.
 error.611.check_user_error=Check user error, because bad password or invalid token.
 error.611.data_invalid=Data is not valid.
 error.611.weak_password=Weak password\uFF0Cplease input strong password again info.
 error.613.bean_not_found=Bean {0} not found.
+error.613.function_not_support=Function not support.
+error.701.cycle_in_tree=Cycle in tree object.
+error.701.duplicate_primary_key=Duplicate primary key {0}.
+error.701.field_must_be=The filed {0} value of the operated object must be {1}.
 error.701.input_not_valid=Input not valid
 error.701.invalid_check_code=Invalid check code.
 error.701.invalid_password=Invalid password, please input it again.
