--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -9,12 +9,19 @@ error.500.inner_error_1=\u5185\u90E8\u9519\u8BEF:{0}\uFF0C\u8BF7\u8054\u7CFB\u5F
 error.500.unknown=\u5185\u90E8\u9519\u8BEF\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458\uFF1B\u5F00\u53D1\u4EBA\u5458\u8BF7\u67E5\u770B\u540E\u53F0\u65E5\u5FD7\u3002
 error.604.data_not_found=\u627E\u4E0D\u5230\u5BF9\u5E94\u7684\u6570\u636E\u3002
 error.604.dictionary_not_found=\u627E\u4E0D\u5230\u5BF9\u5E94\u7684\u6570\u636E\u5B57\u5178\u3002
+error.604.object_not_found=\u5BF9\u8C61\u627E\u4E0D\u5230\uFF0C\u7C7B\u540D{0}\u4E3B\u952E{1}\u3002
 error.604.unit_not_found=\u627E\u4E0D\u5230\u4EE3\u7801\u4E3A{0}\u7684\u673A\u6784\u3002
 error.604.user_not_found=\u627E\u4E0D\u5230\u4EE3\u7801\u4E3A{0}\u7684\u7528\u6237\u3002
+error.610.cannot_delete_parent=\u4E0D\u80FD\u5220\u9664\u542B\u6709\u5B57\u8868\u7684\u8BB0\u5F55\u6216\u8005\u6811\u4E2D\u7684\u542B\u6709\u5B50\u8282\u70B9\u7684\u975E\u7A7A\u8282\u70B9\u3002
+error.610.data_not_integrated=\u6570\u636E\u4E0D\u5B8C\u6574\u3002
 error.611.check_user_error=\u7528\u6237\u9A8C\u8BC1\u5931\u8D25\uFF0C\u9519\u8BEF\u7684\u7528\u6237\u540D\u3001\u5BC6\u7801\u6216\u8005\u5931\u6548\u7684\u4EE4\u724C\u3002
 error.611.data_invalid=\u5F55\u5165\u7684\u6570\u636E\u4E0D\u5408\u6CD5\u3002
 error.611.weak_password=\u5F31\u5BC6\u7801\uFF0C\u8BF7\u6839\u636E\u63D0\u793A\u8F93\u5165\u7B26\u5408\u5F3A\u5EA6\u7684\u5BC6\u7801\u3002
 error.613.bean_not_found=\u7CFB\u7EDF\u627E\u4E0D\u5230\u540D\u4E3A {0} \u7684 bean\u3002
+error.613.function_not_support=\u4E0D\u652F\u6301\u7684\u529F\u80FD\u6216\u8005\u65B9\u6CD5\u3002
+error.701.cycle_in_tree=\u6811\u5F62\u5BF9\u8C61\u4E2D\u5B58\u5728\u5FAA\u73AF\u6216\u8005\u81EA\u5FAA\u73AF\u3002
+error.701.duplicate_primary_key=\u4E3B\u952E\u91CD\u590D\uFF0CID\uFF1A{0}\u3002
+error.701.field_must_be=\u64CD\u4F5C\uFF08\u589E\u5220\u6539\u67E5\uFF09\u7684\u5BF9\u8C61\u5C5E\u6027 {0} \u5F97\u503C\u5FC5\u987B\u662F {1} \u6216\u5176\u4E2D\u4E4B\u4E00\u3002
 error.701.input_not_valid=\u8868\u5355\u8F93\u5165\u6570\u636E\u9A8C\u8BC1\u5931\u8D25
 error.701.invalid_check_code=\u9A8C\u8BC1\u7801\u8F93\u5165\u6709\u8BEF\uFF0C\u8BF7\u68C0\u67E5\u540E\u91CD\u65B0\u8F93\u5165\uFF01
 error.701.invalid_password=\u60A8\u8F93\u5165\u7684\u5BC6\u7801\u4E0D\u6B63\u786E\uFF0C\u8BF7\u91CD\u65B0\u8F93\u5165\u5BC6\u7801\u3002
