--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -20,7 +20,7 @@ error.611.weak_password=\u5F31\u5BC6\u7801\uFF0C\u8BF7\u6839\u636E\u63D0\u793A\u
 error.613.bean_not_found=\u7CFB\u7EDF\u627E\u4E0D\u5230\u540D\u4E3A {0} \u7684 bean\u3002
 error.613.function_not_support=\u4E0D\u652F\u6301\u7684\u529F\u80FD\u6216\u8005\u65B9\u6CD5\u3002
 error.701.cycle_in_tree=\u6811\u5F62\u5BF9\u8C61\u4E2D\u5B58\u5728\u5FAA\u73AF\u6216\u8005\u81EA\u5FAA\u73AF\u3002
-error.701.duplicate_primary_key=\u4E3B\u952E\u91CD\u590D\uFF0CID\uFF1A{0}\u3002
+error.702.duplicate_primary_key=\u5BF9\u8C61{0}\u4E3B\u952E\u91CD\u590D\uFF0CID\uFF1A{1}\u3002
 error.701.field_must_be=\u64CD\u4F5C\uFF08\u589E\u5220\u6539\u67E5\uFF09\u7684\u5BF9\u8C61\u5C5E\u6027 {0} \u5F97\u503C\u5FC5\u987B\u662F {1} \u6216\u5176\u4E2D\u4E4B\u4E00\u3002
 error.701.input_not_valid=\u8868\u5355\u8F93\u5165\u6570\u636E\u9A8C\u8BC1\u5931\u8D25
 error.701.invalid_check_code=\u9A8C\u8BC1\u7801\u8F93\u5165\u6709\u8BEF\uFF0C\u8BF7\u68C0\u67E5\u540E\u91CD\u65B0\u8F93\u5165\uFF01
