完善国际化 信息文本和对应的 代码

--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -12,7 +12,7 @@ error.604.dictionary_not_found=dictionary not found.
 error.604.object_not_found=Object not found, class {0} id {1}.
 error.604.unit_not_found=unit:{0} not found.
 error.604.user_not_found=user:{0} not found.
-error.610.cannot_delete_parent=Could not delete item with children or sublist.
+error.610.cannot_delete_parent=Could not delete item with children\u3001sublist or be quoted, refcode:{0}.
 error.610.data_not_integrated=Data not integrated.
 error.611.check_user_error=Check user error, because bad password or invalid token.
 error.611.data_invalid=Data is not valid.
@@ -28,3 +28,5 @@ error.701.invalid_password=Invalid password, please input it again.
 error.706.no_process_power=The user has no power to process the application.
 error.709.session_timeout=Session timeout, please log in again.
 error.711.bad_tenant=The user current tenant is not equals the application tenant, please config.
+error.702.field_readonly=Class {0} filed {1} can not be modified.
+error.701.field_is_blank=Field {0} is null or blank.
