--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -12,7 +12,7 @@ error.604.dictionary_not_found=\u627E\u4E0D\u5230\u5BF9\u5E94\u7684\u6570\u636E\
 error.604.object_not_found=\u5BF9\u8C61\u627E\u4E0D\u5230\uFF0C\u7C7B\u540D{0}\u4E3B\u952E{1}\u3002
 error.604.unit_not_found=\u627E\u4E0D\u5230\u4EE3\u7801\u4E3A{0}\u7684\u673A\u6784\u3002
 error.604.user_not_found=\u627E\u4E0D\u5230\u4EE3\u7801\u4E3A{0}\u7684\u7528\u6237\u3002
-error.610.cannot_delete_parent=\u4E0D\u80FD\u5220\u9664\u542B\u6709\u5B57\u8868\u7684\u8BB0\u5F55\u6216\u8005\u6811\u4E2D\u7684\u542B\u6709\u5B50\u8282\u70B9\u7684\u975E\u7A7A\u8282\u70B9\u3002
+error.610.cannot_delete_parent=\u4E0D\u80FD\u5220\u9664\u542B\u6709\u5B50\u8868\u7684\u8BB0\u5F55\u3001\u5F15\u7528\u5173\u7CFB\u6216\u8005\u6811\u4E2D\u7684\u542B\u6709\u5B50\u8282\u70B9\u7684\u975E\u7A7A\u8282\u70B9, \u5F15\u7528\u7F16\u53F7{0}\u3002
 error.610.data_not_integrated=\u6570\u636E\u4E0D\u5B8C\u6574\u3002
 error.611.check_user_error=\u7528\u6237\u9A8C\u8BC1\u5931\u8D25\uFF0C\u9519\u8BEF\u7684\u7528\u6237\u540D\u3001\u5BC6\u7801\u6216\u8005\u5931\u6548\u7684\u4EE4\u724C\u3002
 error.611.data_invalid=\u5F55\u5165\u7684\u6570\u636E\u4E0D\u5408\u6CD5\u3002
@@ -28,3 +28,5 @@ error.701.invalid_password=\u60A8\u8F93\u5165\u7684\u5BC6\u7801\u4E0D\u6B63\u786
 error.706.no_process_power=\u7528\u6237\u6CA1\u6709\u6267\u884C\u7A0B\u5E8F\u7684\u6743\u9650\u3002
 error.709.session_timeout=session\u8D85\u65F6\uFF0C\u8BF7\u91CD\u65B0\u767B\u5F55\u3002
 error.711.bad_tenant=\u7528\u6237\u5F53\u524D\u79DF\u6237\u548C\u5E94\u7528\u4E0D\u4E00\u81F4\uFF0C\u8BF7\u91CD\u65B0\u52A0\u8F7D\uFF01
+error.701.field_is_blank=\u5C5E\u6027{0}\u4E3Anull\u6216\u8005\u7A7A\u3002
+error.702.field_readonly=\u7C7B{0}\u7684\u5C5E\u6027{1}\u4E0D\u80FD\u88AB\u4FEE\u6539\u3002
