--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -30,3 +30,7 @@ error.709.session_timeout=Session timeout, please log in again.
 error.711.bad_tenant=The user current tenant is not equals the application tenant, please config.
 error.702.field_readonly=Class {0} filed {1} can not be modified.
 error.701.field_is_blank=Field {0} is null or blank.
+info.200.success=Operating successed\uFF01
+error.701.userinfo_incomplete=User information is incomplete.
+error.702.userinfo_conflict=Userinfo conflicted\uFF0Cdon't regist once more.
+info.701.resource_limit=You have {0} {1}, could not apply any more.
