--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -30,3 +30,7 @@ error.709.session_timeout=session\u8D85\u65F6\uFF0C\u8BF7\u91CD\u65B0\u767B\u5F5
 error.711.bad_tenant=\u7528\u6237\u5F53\u524D\u79DF\u6237\u548C\u5E94\u7528\u4E0D\u4E00\u81F4\uFF0C\u8BF7\u91CD\u65B0\u52A0\u8F7D\uFF01
 error.701.field_is_blank=\u5C5E\u6027{0}\u4E3Anull\u6216\u8005\u7A7A\u3002
 error.702.field_readonly=\u7C7B{0}\u7684\u5C5E\u6027{1}\u4E0D\u80FD\u88AB\u4FEE\u6539\u3002
+info.200.success=\u64CD\u4F5C\u6210\u529F\u3002
+error.701.userinfo_incomplete=\u7528\u6237\u4FE1\u606F\u4E0D\u5B8C\u6574\uFF0C\u767B\u5F55\u540D,\u5BC6\u7801,\u624B\u673A\u53F7\uFF0C\u7528\u6237\u540D\u4E0D\u80FD\u4E3A\u7A7A!
+error.702.userinfo_conflict=\u7528\u6237\u4FE1\u606F\u51B2\u7A81\uFF0C\u5DF2\u7ECF\u5B58\u5728\u540C\u540D\u3001\u624B\u673A\u53F7\u3001email\u7684\u8D26\u6237\u3002
+info.701.resource_limit=\u60A8\u5DF2\u7ECF\u6709{0}\u4E2A{1}, \u4E0D\u80FD\u518D\u6B21\u7533\u8BF7\u3002
