更改国际化信息

--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -35,3 +35,6 @@ error.702.userinfo_conflict=Userinfo conflicted\uFF0Cdon't register once more.
 info.200.success=Operating successes\uFF01
 info.701.resource_limit=You have {0} {1}, could not apply anymore.
 error.604.datasource_not_found=Could not found the datasource {1} in operate node {0};
+error.704.process_failed=Process is failed, because {0}.
+info.200.apply_success=Apply success, please waiting audit.
+error.801.duplicate_operation=Dulication operation.
