--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -35,3 +35,6 @@ error.702.userinfo_conflict=\u7528\u6237\u4FE1\u606F\u51B2\u7A81\uFF0C\u5DF2\u7E
 info.200.success=\u64CD\u4F5C\u6210\u529F\u3002
 info.701.resource_limit=\u60A8\u5DF2\u7ECF\u6709{0}\u4E2A{1}, \u4E0D\u80FD\u518D\u6B21\u7533\u8BF7\u3002
 error.604.datasource_not_found=\u5728\u64CD\u4F5C\u8282\u70B9{0}\u4E2D\u627E\u4E0D\u5230\u6570\u636E\u6E90{1},\u53EF\u80FD\u662F\u5220\u9664\u4E86\u6570\u636E\u8282\u70B9\u6216\u8005\u6570\u636E\u6E90\u8282\u70B9\u4E0D\u5728\u524D\u5BFC\u8DEF\u5F84\u4E0A\u3002
+error.704.process_failed=\u60A8\u8BF7\u6C42\u7684\u64CD\u4F5C\u5931\u8D25\uFF0C\u539F\u56E0\u662F:{0}\u3002
+info.200.apply_success=\u60A8\u7684\u7533\u8BF7\u5DF2\u63D0\u4EA4\uFF0C\u8BF7\u7B49\u5F85\u76F8\u5173\u4EBA\u5458\u5BA1\u6838\u3002
+error.801.duplicate_operation=\u91CD\u590D\u64CD\u4F5C\u3002
