更改国际化信息

--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -38,3 +38,4 @@ error.604.datasource_not_found=Could not found the datasource {1} in operate nod
 error.704.process_failed=Process is failed, because {0}.
 info.200.apply_success=Apply success, please waiting audit.
 error.801.duplicate_operation=Dulication operation.
+error.702.operate_conflict=The operation could bring confilct.
