--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -38,3 +38,4 @@ error.604.datasource_not_found=\u5728\u64CD\u4F5C\u8282\u70B9{0}\u4E2D\u627E\u4E
 error.704.process_failed=\u60A8\u8BF7\u6C42\u7684\u64CD\u4F5C\u5931\u8D25\uFF0C\u539F\u56E0\u662F:{0}\u3002
 info.200.apply_success=\u60A8\u7684\u7533\u8BF7\u5DF2\u63D0\u4EA4\uFF0C\u8BF7\u7B49\u5F85\u76F8\u5173\u4EBA\u5458\u5BA1\u6838\u3002
 error.801.duplicate_operation=\u91CD\u590D\u64CD\u4F5C\u3002
+error.702.operate_conflict=\u5F53\u524D\u64CD\u4F5C\u4F1A\u5BFC\u81F4\u6570\u636E\u51B2\u7A81\uFF0C\u6216\u8005\u5BFC\u81F4\u6570\u636E\u4E0D\u5B8C\u6574\u3002
