更改国际化信息

--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -39,3 +39,5 @@ error.704.process_failed=Process is failed, because {0}.
 info.200.apply_success=Apply success, please waiting audit.
 error.801.duplicate_operation=Dulication operation.
 error.702.operate_conflict=The operation could bring confilct.
+error.702.field_conflict=Class {0} filed {1} can not be duplicated.
+error.611.send_code_time_limit=Time limit for sending check code.
