--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -39,3 +39,5 @@ error.704.process_failed=\u60A8\u8BF7\u6C42\u7684\u64CD\u4F5C\u5931\u8D25\uFF0C\
 info.200.apply_success=\u60A8\u7684\u7533\u8BF7\u5DF2\u63D0\u4EA4\uFF0C\u8BF7\u7B49\u5F85\u76F8\u5173\u4EBA\u5458\u5BA1\u6838\u3002
 error.801.duplicate_operation=\u91CD\u590D\u64CD\u4F5C\u3002
 error.702.operate_conflict=\u5F53\u524D\u64CD\u4F5C\u4F1A\u5BFC\u81F4\u6570\u636E\u51B2\u7A81\uFF0C\u6216\u8005\u5BFC\u81F4\u6570\u636E\u4E0D\u5B8C\u6574\u3002
+error.702.field_conflict=\u7C7B{0}\u7684\u5C5E\u6027{1}\u552F\u4E00\u6027\u51B2\u7A81\u3002
+error.611.send_code_time_limit=\u53D1\u9001\u9A8C\u8BC1\u7801\u65F6\u95F4\u9650\u5236\u4E3A1\u5206\u949F\uFF0C\u4E0D\u80FD\u9891\u53D1\u53D1\u9001\u3002
