更改国际化信息

--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -41,3 +41,8 @@ error.801.duplicate_operation=Dulication operation.
 error.702.operate_conflict=The operation could bring confilct.
 error.702.field_conflict=Class {0} filed {1} can not be duplicated.
 error.611.send_code_time_limit=Time limit for sending check code.
+error.611.verify_code_is_blank=Verify code is blank.
+error.611.verify_code_is_expired=Verify code is expired.
+error.611.verify_code_not_correct=Verify code is not correct.
+error.611.verify_code_not_create=Verify code has not been created.
+error.802.sms_send_fail=Send sms message is fail.
