--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -41,3 +41,8 @@ error.801.duplicate_operation=\u91CD\u590D\u64CD\u4F5C\u3002
 error.702.operate_conflict=\u5F53\u524D\u64CD\u4F5C\u4F1A\u5BFC\u81F4\u6570\u636E\u51B2\u7A81\uFF0C\u6216\u8005\u5BFC\u81F4\u6570\u636E\u4E0D\u5B8C\u6574\u3002
 error.702.field_conflict=\u7C7B{0}\u7684\u5C5E\u6027{1}\u552F\u4E00\u6027\u51B2\u7A81\u3002
 error.611.send_code_time_limit=\u53D1\u9001\u9A8C\u8BC1\u7801\u65F6\u95F4\u9650\u5236\u4E3A1\u5206\u949F\uFF0C\u4E0D\u80FD\u9891\u53D1\u53D1\u9001\u3002
+error.611.verify_code_not_create=\u9A8C\u8BC1\u7801\u6CA1\u672A\u53D1\u9001\uFF0C\u8BF7\u5148\u8BF7\u6C42\u53D1\u9001\u9A8C\u8BC1\u7801\uFF01
+error.611.verify_code_is_blank=\u6CA1\u6709\u6B63\u786E\u586B\u5199\u9A8C\u8BC1\u7801\u3002
+error.611.verify_code_not_correct=\u9A8C\u8BC1\u7801\u586B\u5199\u4E0D\u6B63\u786E\u3002
+error.611.verify_code_is_expired=\u9A8C\u8BC1\u7801\u5DF2\u8FC7\u671F\uFF01
+error.802.sms_send_fail=\u53D1\u9001\u77ED\u4FE1\u5F02\u5E38\u3002
