更改国际化信息

--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -45,4 +45,9 @@ error.611.verify_code_is_blank=Verify code is blank.
 error.611.verify_code_is_expired=Verify code is expired.
 error.611.verify_code_not_correct=Verify code is not correct.
 error.611.verify_code_not_create=Verify code has not been created.
-error.802.sms_send_fail=Send sms message is fail.
+error.704.sms_send_fail=Send sms message is fail.
+error.604.user_not_in_unit=The user does not in the current unit.
+error.702.user_has_in_unit=User has been in current unit.
+error.703.cannot_delete_userunit=Could not remove user from this unit.
+error.703.cannt_delete_default=Could not delete the default value.
+error.604.user_without_role=The user has not the role.
