--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -45,4 +45,9 @@ error.611.verify_code_not_create=\u9A8C\u8BC1\u7801\u6CA1\u672A\u53D1\u9001\uFF0
 error.611.verify_code_is_blank=\u6CA1\u6709\u6B63\u786E\u586B\u5199\u9A8C\u8BC1\u7801\u3002
 error.611.verify_code_not_correct=\u9A8C\u8BC1\u7801\u586B\u5199\u4E0D\u6B63\u786E\u3002
 error.611.verify_code_is_expired=\u9A8C\u8BC1\u7801\u5DF2\u8FC7\u671F\uFF01
-error.802.sms_send_fail=\u53D1\u9001\u77ED\u4FE1\u5F02\u5E38\u3002
+error.704.sms_send_fail=\u53D1\u9001\u77ED\u4FE1\u5F02\u5E38\u3002
+error.604.user_not_in_unit=\u5F53\u524D\u673A\u6784\u4E2D\u65E0\u6B64\u7528\u6237\u3002
+error.702.user_has_in_unit=\u7528\u6237\u5DF2\u7ECF\u5728\u672C\u673A\u6784\u4E2D\uFF0C\u65E0\u9700\u91CD\u590D\u6DFB\u52A0\u3002
+error.703.cannot_delete_userunit=\u5F52\u5C5E\u90E8\u95E8\uFF0C\u6216\u501F\u51FA\u90E8\u95E8\u4FE1\u606F\u4E0D\u80FD\u5220\u9664\uFF01
+error.703.cannt_delete_default=\u4E0D\u80FD\u5220\u9664\u9ED8\u8BA4\u503C\u3002
+error.604.user_without_role=\u5F53\u524D\u89D2\u8272\u4E2D\u65E0\u6B64\u7528\u6237/\u7528\u6237\u6CA1\u6709\u8FD9\u4E2A\u89D2\u8272\u3002
