更改国际化信息

--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -1,6 +1,6 @@
 error.302.user_is_locked=User is locked, please try late!
 error.302.user_not_login=user not login or session invalid.
-error.401.unauthorized=unauthorized.
+error.401.unauthorized=Unauthorized.
 error.403.access_forbidden=current access is forbidden.
 error.403.user_not_in_tenant=The user is not belong to current tenant.
 error.404.resource_not_found=resource not found.
@@ -11,7 +11,7 @@ error.604.data_not_found=data not found.
 error.604.dictionary_not_found=dictionary not found.
 error.604.object_not_found=Object not found, class {0} id {1}.
 error.604.unit_not_found=unit:{0} not found.
-error.604.user_not_found=user:{0} not found.
+error.604.user_not_found=User:{0} not found.
 error.610.cannot_delete_parent=Could not delete item with children\u3001sublist or be quoted, refcode:{0}.
 error.610.data_not_integrated=Data not integrated.
 error.611.check_user_error=Check user error, because bad password or invalid token.
@@ -51,3 +51,7 @@ error.702.user_has_in_unit=User has been in current unit.
 error.703.cannot_delete_userunit=Could not remove user from this unit.
 error.703.cannt_delete_default=Could not delete the default value.
 error.604.user_without_role=The user has not the role.
+error.611.loginname_already_exists=The login name already exists.
+error.611.phone_already_exists=The phone already exists.
+error.611.email_already_exists=The email already exists.
+error.604.unit_without_role=The unit has not the role.
