--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,6 +1,6 @@
 error.302.user_is_locked=\u7528\u6237\u88AB\u9501\u5B9A\uFF0C\u8BF7\u7A0D\u540E\u518D\u8BD5\uFF01
 error.302.user_not_login=\u7528\u6237\u672A\u767B\u5F55\u6216\u8005session\u5DF2\u5931\u6548\u3002
-error.401.unauthorized=\u672A\u6388\u6743\u7684\u8BBF\u95EE\u3002
+error.401.unauthorized=\u672A\u6388\u6743\u7684\u8BBF\u95EE/\u64CD\u4F5C\u3002
 error.403.access_forbidden=\u5F53\u524D\u8BBF\u95EE\u88AB\u62D2\u7EDD\uFF08\u7528\u6237\u6CA1\u6709\u5BF9\u5E94\u7684\u6743\u9650\uFF09\u3002
 error.403.user_not_in_tenant=\u7528\u6237\u4E0D\u5C5E\u4E8E\u5F53\u524D\u79DF\u6237\uFF0C\u65E0\u6743\u64CD\u4F5C\u3002
 error.404.resource_not_found=\u627E\u4E0D\u5230\u5BF9\u5E94\u7684\u8D44\u6E90\uFF08\u6587\u4EF6\uFF09\u3002
@@ -31,7 +31,7 @@ error.711.bad_tenant=\u7528\u6237\u5F53\u524D\u79DF\u6237\u548C\u5E94\u7528\u4E0
 error.701.field_is_blank=\u5C5E\u6027{0}\u4E3Anull\u6216\u8005\u7A7A\u3002
 error.702.field_readonly=\u7C7B{0}\u7684\u5C5E\u6027{1}\u4E0D\u80FD\u88AB\u4FEE\u6539\u3002
 error.701.userinfo_incomplete=\u7528\u6237\u4FE1\u606F\u4E0D\u5B8C\u6574\uFF0C\u767B\u5F55\u540D,\u5BC6\u7801,\u624B\u673A\u53F7\uFF0C\u7528\u6237\u540D\u4E0D\u80FD\u4E3A\u7A7A!
-error.702.userinfo_conflict=\u7528\u6237\u4FE1\u606F\u51B2\u7A81\uFF0C\u5DF2\u7ECF\u5B58\u5728\u540C\u540D\u3001\u624B\u673A\u53F7\u3001email\u7684\u8D26\u6237\u3002
+error.702.userinfo_conflict=\u7528\u6237\u4FE1\u606F\u51B2\u7A81\uFF0C\u5DF2\u7ECF\u5B58\u5728\u540C\u540D(\u767B\u5F55\u540D)\u3001\u624B\u673A\u53F7\u3001email\u7684\u8D26\u6237\u3002
 info.200.success=\u64CD\u4F5C\u6210\u529F\u3002
 info.701.resource_limit=\u60A8\u5DF2\u7ECF\u6709{0}\u4E2A{1}, \u4E0D\u80FD\u518D\u6B21\u7533\u8BF7\u3002
 error.604.datasource_not_found=\u5728\u64CD\u4F5C\u8282\u70B9{0}\u4E2D\u627E\u4E0D\u5230\u6570\u636E\u6E90{1},\u53EF\u80FD\u662F\u5220\u9664\u4E86\u6570\u636E\u8282\u70B9\u6216\u8005\u6570\u636E\u6E90\u8282\u70B9\u4E0D\u5728\u524D\u5BFC\u8DEF\u5F84\u4E0A\u3002
@@ -51,3 +51,7 @@ error.702.user_has_in_unit=\u7528\u6237\u5DF2\u7ECF\u5728\u672C\u673A\u6784\u4E2
 error.703.cannot_delete_userunit=\u5F52\u5C5E\u90E8\u95E8\uFF0C\u6216\u501F\u51FA\u90E8\u95E8\u4FE1\u606F\u4E0D\u80FD\u5220\u9664\uFF01
 error.703.cannt_delete_default=\u4E0D\u80FD\u5220\u9664\u9ED8\u8BA4\u503C\u3002
 error.604.user_without_role=\u5F53\u524D\u89D2\u8272\u4E2D\u65E0\u6B64\u7528\u6237/\u7528\u6237\u6CA1\u6709\u8FD9\u4E2A\u89D2\u8272\u3002
+error.611.loginname_already_exists=\u7528\u6237\u7684\u767B\u5F55\u540D\u5DF2\u5B58\u5728.
+error.611.email_already_exists=\u7528\u6237\u7684\u9884\u7559\u7684email\u5DF2\u5B58\u5728\u3002
+error.611.phone_already_exists=\u7528\u6237\u7684\u9884\u7559\u7684\u7535\u8BDD\u53F7\u7801\u5DF2\u5B58\u5728\u3002
+error.604.unit_without_role=\u5F53\u524D\u89D2\u8272\u4E2D\u65E0\u6B64\u673A\u6784/\u5F53\u524D\u673A\u6784\u6CA1\u6709\u8FD9\u4E2A\u89D2\u8272\u3002
