--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -55,3 +55,6 @@ error.611.loginname_already_exists=The login name already exists.
 error.611.phone_already_exists=The phone already exists.
 error.611.email_already_exists=The email already exists.
 error.604.unit_without_role=The unit has not the role.
+error.404.file_not_found=File {0} not found\u3002
+error.423.cannt_encrypt_file=Encypt file error, reason {0}.
+error.403.download_file_forbidden=User:{0} in unit:{1} is forbidden or the authCode:{2} is not correct.
