--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -15,7 +15,7 @@ error.604.user_not_found=\u627E\u4E0D\u5230\u4EE3\u7801\u4E3A{0}\u7684\u7528\u62
 error.610.cannot_delete_parent=\u4E0D\u80FD\u5220\u9664\u542B\u6709\u5B50\u8868\u7684\u8BB0\u5F55\u3001\u5F15\u7528\u5173\u7CFB\u6216\u8005\u6811\u4E2D\u7684\u542B\u6709\u5B50\u8282\u70B9\u7684\u975E\u7A7A\u8282\u70B9, \u5F15\u7528\u7F16\u53F7{0}\u3002
 error.610.data_not_integrated=\u6570\u636E\u4E0D\u5B8C\u6574\u3002
 error.611.check_user_error=\u7528\u6237\u9A8C\u8BC1\u5931\u8D25\uFF0C\u9519\u8BEF\u7684\u7528\u6237\u540D\u3001\u5BC6\u7801\u6216\u8005\u5931\u6548\u7684\u4EE4\u724C\u3002
-error.611.data_invalid=\u5F55\u5165\u7684\u6570\u636E\u4E0D\u5408\u6CD5\u3002
+error.611.data_invalid=\u8F93\u5165\u7684\u6570\u636E\u4E0D\u5408\u6CD5\u3002
 error.611.weak_password=\u5F31\u5BC6\u7801\uFF0C\u8BF7\u6839\u636E\u63D0\u793A\u8F93\u5165\u7B26\u5408\u5F3A\u5EA6\u7684\u5BC6\u7801\u3002
 error.613.bean_not_found=\u7CFB\u7EDF\u627E\u4E0D\u5230\u540D\u4E3A {0} \u7684 bean\u3002
 error.613.function_not_support=\u4E0D\u652F\u6301\u7684\u529F\u80FD\u6216\u8005\u65B9\u6CD5\u3002
@@ -55,3 +55,6 @@ error.611.loginname_already_exists=\u7528\u6237\u7684\u767B\u5F55\u540D\u5DF2\u5
 error.611.email_already_exists=\u7528\u6237\u7684\u9884\u7559\u7684email\u5DF2\u5B58\u5728\u3002
 error.611.phone_already_exists=\u7528\u6237\u7684\u9884\u7559\u7684\u7535\u8BDD\u53F7\u7801\u5DF2\u5B58\u5728\u3002
 error.604.unit_without_role=\u5F53\u524D\u89D2\u8272\u4E2D\u65E0\u6B64\u673A\u6784/\u5F53\u524D\u673A\u6784\u6CA1\u6709\u8FD9\u4E2A\u89D2\u8272\u3002
+error.404.file_not_found=\u6587\u4EF6 {0} \u627E\u4E0D\u5230\u3002
+error.423.cannt_encrypt_file=\u89E3\u7801\u6587\u4EF6\u5931\u8D25: {0}\u3002
+error.403.download_file_forbidden=\u7528\u6237:{0} \u6240\u5C5E\u673A\u6784:{1} \u6CA1\u6709\u6743\u9650;\u6216\u8005\u9A8C\u8BC1\u7801 {2} \u4E0D\u6B63\u786E\u3002
