添加密码有效期

--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -58,3 +58,4 @@ error.604.unit_without_role=The unit has not the role.
 error.404.file_not_found=File {0} not found\u3002
 error.423.cannt_encrypt_file=Encypt file error, reason {0}.
 error.403.download_file_forbidden=User:{0} in unit:{1} is forbidden or the authCode:{2} is not correct.
+error.611.cannt_use_old_password=Can not use old password\uFF0C please input a new one.
