--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -58,3 +58,4 @@ error.604.unit_without_role=\u5F53\u524D\u89D2\u8272\u4E2D\u65E0\u6B64\u673A\u67
 error.404.file_not_found=\u6587\u4EF6 {0} \u627E\u4E0D\u5230\u3002
 error.423.cannt_encrypt_file=\u89E3\u7801\u6587\u4EF6\u5931\u8D25: {0}\u3002
 error.403.download_file_forbidden=\u7528\u6237:{0} \u6240\u5C5E\u673A\u6784:{1} \u6CA1\u6709\u6743\u9650;\u6216\u8005\u9A8C\u8BC1\u7801 {2} \u4E0D\u6B63\u786E\u3002
+error.611.cannt_use_old_password=\u4E0D\u80FD\u4F7F\u7528\u65E7\u5BC6\u7801\uFF0C\u8BF7\u8BBE\u7F6E\u4E0D\u4E00\u6837\u7684\u5BC6\u7801\u3002
