添加滑动验证码的获取

--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -60,3 +60,4 @@ error.423.cannt_encrypt_file=Encypt file error, reason {0}.
 error.403.download_file_forbidden=User:{0} in unit:{1} is forbidden or the authCode:{2} is not correct.
 error.611.cannt_use_old_password=Can not use old password, please input a new one.
 error.611.autologin_error=User token authentication failed, please jump to the login page.
+error.611.bad_slide_time=Failed to obtain the sliding verification code.
