--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -21,7 +21,7 @@ error.613.bean_not_found=Bean {0} not found.
 error.613.function_not_support=Function not support.
 error.701.cycle_in_tree=Cycle in tree object.
 error.702.duplicate_primary_key=Duplicate primary key, object {0} id {1}.
-error.701.field_must_be=The filed {0} value of the operated object must be {1}.
+error.701.field_must_be=The field {0} value of the operated object must be {1}.
 error.701.input_not_valid=Input not valid
 error.701.invalid_check_code=Invalid check code.
 error.701.invalid_password=Invalid password, please input it again.
