整理消息提示

--- a/framework-core/src/main/resources/i18n/messages.properties
+++ b/framework-core/src/main/resources/i18n/messages.properties
@@ -12,11 +12,11 @@ error.604.dictionary_not_found=dictionary not found.
 error.604.object_not_found=Object not found, class {0} id {1}.
 error.604.unit_not_found=unit:{0} not found.
 error.604.user_not_found=User:{0} not found.
-error.610.cannot_delete_parent=Could not delete item with children\u3001sublist or be quoted, refcode:{0}.
+error.610.cannot_delete_parent=Could not delete item with children or sublist or be quoted, refcode:{0}.
 error.610.data_not_integrated=Data not integrated.
 error.611.check_user_error=Check user error, because bad password or invalid token.
 error.611.data_invalid=Data is not valid.
-error.611.weak_password=Weak password\uFF0Cplease input strong password again info.
+error.611.weak_password=Weak password, please input strong password again info.
 error.613.bean_not_found=Bean {0} not found.
 error.613.function_not_support=Function not support.
 error.701.cycle_in_tree=Cycle in tree object.
@@ -31,10 +31,10 @@ error.711.bad_tenant=The user current tenant is not equals the application tenan
 error.702.field_readonly=Class {0} filed {1} can not be modified.
 error.701.field_is_blank=Field {0} is null or blank.
 error.701.userinfo_incomplete=User information is incomplete.
-error.702.userinfo_conflict=Userinfo conflicted\uFF0Cdon't register once more.
-info.200.success=Operating successes\uFF01
+error.702.userinfo_conflict=Userinfo conflicted, don't register once more.
+info.200.success=Operating successes!
 info.701.resource_limit=You have {0} {1}, could not apply anymore.
-error.604.datasource_not_found=Could not found the datasource {1} in operate node {0};
+error.604.datasource_not_found=Could not found the datasource {1} in operate node {0}.
 error.704.process_failed=Process is failed, because {0}.
 info.200.apply_success=Apply success, please waiting audit.
 error.801.duplicate_operation=Dulication operation.
@@ -55,9 +55,10 @@ error.611.loginname_already_exists=The login name already exists.
 error.611.phone_already_exists=The phone already exists.
 error.611.email_already_exists=The email already exists.
 error.604.unit_without_role=The unit has not the role.
-error.404.file_not_found=File {0} not found\u3002
+error.404.file_not_found=File {0} not found.
 error.423.cannt_encrypt_file=Encypt file error, reason {0}.
 error.403.download_file_forbidden=User:{0} in unit:{1} is forbidden or the authCode:{2} is not correct.
 error.611.cannt_use_old_password=Can not use old password, please input a new one.
 error.611.autologin_error=User token authentication failed, please jump to the login page.
 error.611.bad_slide_time=Failed to obtain the sliding verification code.
+error.404.file_cannot_be_converted_to_pdf=The file cannot be converted to PDF.
