--- a/framework-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/framework-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -61,3 +61,4 @@ error.403.download_file_forbidden=\u7528\u6237:{0} \u6240\u5C5E\u673A\u6784:{1} 
 error.611.cannt_use_old_password=\u4E0D\u80FD\u4F7F\u7528\u65E7\u5BC6\u7801\uFF0C\u8BF7\u8BBE\u7F6E\u4E0D\u4E00\u6837\u7684\u5BC6\u7801\u3002
 error.611.autologin_error=\u7528\u6237\u51ED\u8BC1\u9A8C\u8BC1\u5931\u8D25\uFF0C\u8BF7\u8DF3\u8F6C\u5230\u767B\u5F55\u9875\u9762\u3002
 error.611.bad_slide_time=\u83B7\u53D6\u6ED1\u52A8\u9A8C\u8BC1\u7801\u5931\u8D25\u3002
+error.404.file_cannot_be_converted_to_pdf=\u6587\u4EF6\u4E0D\u80FD\u88AB\u8F6C\u6362\u4E3Apdf\uFF0C\u4E0D\u80FD\u5728\u7EBF\u9884\u89C8\u3002
